# test

./: .gitmodules  .travis.yml  CMakeLists.txt
examples/: main.cpp
examples/files/: vlad.file
include/: client.cpp  client.hpp  server.hpp  sort_test.cpp  ss.cpp  time.hpp
include/boost/process/: operations.hpp
sources/: CMakeLists.txt  client.cpp  clientik.cpp
tests/: CMakeLists.txt  catch.h  init.cpp
tests/fixtures/: config.с
